--- a/index.html
+++ b/index.html
@@ -5,8 +5,101 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <a href="index.html">
+        <img src="https://via.placeholder.com/200x46" width="200" height="46" alt="Логотип интернет-магазина «Техномарт»">
+      </a>
+      <ul>
+        <li>Поиск:</li> <!--Здесь будет форма. -->
+        <li><a href="#">Закладки: 0</a></li> <!--Здесь будет форма. -->
+        <li><a href="#">Корзина:0</a></li> <!--Здесь будет форма. -->
+        <li><a href="#">Оформить заказ</a></li> <!--Здесь будет форма. -->
+      </ul>
+      <p> Интернет-магазин <br>
+        строительных материалов <br>
+        и инструментов для ремонта
+      </p>
+      <section>
+        <h2 hidden>Контактный телефон:</h2>
+        <span>+7 (812) 555-05-55</span>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </section>
+      <ul>
+      <li><button type="button" name="sign-in">Войти</button></li>
+      <li><button type="button" name="sign-up">Регистрация</button></li>
+      </ul>
+      <nav>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Компания "Техномарт"</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
+          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+         <button type="button" name="company-info">Подробнее о компании</button> <!-- Здесь будет форма. -->
+      </section>
+      <section>
+        <h2>Котакты</h2>
+        <p>Вы можете забрать товар сами, <br>
+          заехав в наш офис:</p>
+        <img src="https://via.placeholder.com/300x168" width="300" height="168" alt="Карта расположения офиса компании.">
+        <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
+      </section>
+    </main>
+    <footer>
+      <section>
+      <a href="index.html">
+        <img src="https://via.placeholder.com/200x46" width="200" height="46" alt="Логотип интернет-магазина «Техномарт»">
+      </a>
+      <nav>
+        <ul>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      <p>+7 (812) 555-05-55</p>
+      <nav>
+        <ul>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </nav>
+      </section>
+      <section>
+        <p>© 2010–2019 Компания «Техномарт» <br>
+          Все права защищены</p>
+        <div>
+          <a href="https://vk.com/rewoop"><img src="vk.jpg" alt="Вкотакте"></a>
+          <a href="#"><img src="instagram.jpg" alt="Инстаграм"></a>
+          <a href="#"><img src="facebook.jpg" alt="Фэйсбук"></a>
+        </div>
+        <p>Обратная связь: <br>
+          mail@htmlacademy.ru</p>
+        <p>Разработано — <br>
+          <a href="https://htmlacademy.ru">htmlacademy.ru</a></p>
+      </section>
+    </footer>
   </body>
 </html>
