--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
       </section>
     </main>
     <footer>
-      <section>
       <a href="index.html">
         <img src="https://via.placeholder.com/200x46" width="200" height="46" alt="Логотип интернет-магазина «Техномарт»">
       </a>
@@ -86,20 +85,17 @@
           <li><a href="#">Спецпредложения</a></li>
         </ul>
       </nav>
-      </section>
-      <section>
-        <p>© 2010–2019 Компания «Техномарт» <br>
-          Все права защищены</p>
-        <div>
-          <a href="https://vk.com/rewoop"><img src="vk.jpg" alt="Вкотакте"></a>
-          <a href="#"><img src="instagram.jpg" alt="Инстаграм"></a>
-          <a href="#"><img src="facebook.jpg" alt="Фэйсбук"></a>
-        </div>
-        <p>Обратная связь: <br>
-          mail@htmlacademy.ru</p>
-        <p>Разработано — <br>
-          <a href="https://htmlacademy.ru">htmlacademy.ru</a></p>
-      </section>
+      <p>© 2010–2019 Компания «Техномарт» <br>
+        Все права защищены</p>
+      <div>
+        <a href="https://vk.com/rewoop"><img src="vk.jpg" alt="Вкотакте"></a>
+        <a href="#"><img src="instagram.jpg" alt="Инстаграм"></a>
+        <a href="#"><img src="facebook.jpg" alt="Фэйсбук"></a>
+      </div>
+      <p>Обратная связь: <br>
+        mail@htmlacademy.ru</p>
+      <p>Разработано — <br>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
     </footer>
   </body>
 </html>
