Выполнил разметку блоков, которые были недоступны в основном задании.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,171 @@
     </header>
     <main>
       <section>
+        <h2>Материалы</h2>
+        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Материалы">
+        <form action="#" method="get">
+          <button>На любой вкус</button>
+        </form>
+      </section>
+      <section>
+        <h2>Инструмент</h2>
+        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Инструмент">
+        <form action="#" method="get">
+          <button>На все случаи</button>
+        </form>
+      </section>
+      <section>
+        <h2>Техника</h2>
+        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Техника">
+        <form action="#" method="get">
+          <button>Для стройки</button>
+        </form>
+      </section>
+      <section>
+        <h2>Дрели</h2>
+        <p>Соседям на радость</p>
+        <img src="https://via.placeholder.com/620x266" width="620" height="266" alt="Дрели">
+        <form action="catalog.html" method="get">
+          <button>Открыть каталог</button>
+        </form>
+        <button type="button" name="left-slide">&lt;</button>
+        <button type="button" name="right-slide">&gt;</button>
+      </section>
+      <section>
+        <h2>Скидки 50%</h2>
+        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Скидки 50%">
+        <form action="#" method="get">
+          <button>На 350 товаров</button>
+        </form>
+      </section>
+      <section>
+        <h2>Доставка</h2>
+        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Доставка">
+        <form action="#" method="get">
+          <button>Бесплатно</button>
+        </form>
+      </section>
+      <section>
+        <h2>Популярные товары:</h2>
+        <form action="#" method="get">
+          <button>Все популярные товары</button>
+        </form>
+        <ul>
+          <li>
+            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 9000"></a>
+            <h3>
+              <a href="catalog-item.html">
+              <span>Перфоратор BOSCH</span>
+              <span>BFG 9000</span>
+              </a>
+            </h3>
+            <p><del>32500 Р.</del> </p>
+            <button type="button" name="price">25500 Р.</button>
+          </li>
+          <li>
+            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 3000"></a>
+            <h3>
+              <a href="catalog-item.html">
+              <span>Перфоратор BOSCH</span>
+              <span>BFG 3000</span>
+              </a>
+            </h3>
+            <p><del>22500 Р.</del> </p>
+            <button type="button" name="price">15500 Р.</button>
+          </li>
+          <li>
+            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 6000"></a>
+            <h3>
+              <a href="catalog-item.html">
+              <span>Перфоратор BOSCH</span>
+              <span>BFG 6000</span>
+              </a>
+            </h3>
+            <p><del>30500 Р.</del> </p>
+            <button type="button" name="price">25500 Р.</button>
+          </li>
+          <li>
+            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 2000"></a>
+            <h3>
+              <a href="catalog-item.html">
+              <span>Перфоратор BOSCH</span>
+              <span>BFG 2000</span>
+              </a>
+            </h3>
+            <button type="button" name="price">12500 Р.</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Популярные производители:</h2>
+        <form action="#" method="get">
+          <button>Все производители</button>
+        </form>
+        <ul>
+          <li>
+            <a href="https://www.bosch.ru/">
+              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Bosch">
+            </a>
+          </li>
+          <li>
+            <a href="http://www.makita.ru/">
+              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Makita">
+            </a>
+          </li>
+          <li>
+            <a href="https://ru.dewalt.global/">
+              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Dewalt">
+            </a>
+          </li>
+          <li>
+            <a href="http://www.interskol.ru/">
+              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Интерскол">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.hitachi.ru/ru">
+              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Hitachi">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.lg.com/ru">
+              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="LG">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.aeg.ru/">
+              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="AEG">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.metabo.com/ru/ru/">
+              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="metabo">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <ul>
+          <li>
+            <h3>Доставка</h3>
+              <p>Доставка</p>
+              <p>Мы с удовольствием доставим ваш товар прямо <br>
+                к вашему подъезду совершенно бесплатно! <br>
+                Ведь мы неплохо заработаем, <br>
+                поднимая его на ваш этаж!</p>
+          </li>
+          <li>
+            <h3>Гарантия</h3>
+          </li>
+          <li>
+            <h3>Кредит</h3>
+          </li>
+        </ul>
+      </section>
+      <section>
         <h2>Компания "Техномарт"</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -58,7 +223,9 @@
         <h2>Котакты</h2>
         <p>Вы можете забрать товар сами, <br>
           заехав в наш офис:</p>
-        <img src="https://via.placeholder.com/300x168" width="300" height="168" alt="Карта расположения офиса компании.">
+        <a href="https://yandex.ru/maps/-/CBF9nKAJWA">
+          <img src="https://via.placeholder.com/300x168" width="300" height="168" alt="Карта расположения офиса компании.">
+        </a>
         <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
       </section>
     </main>
