--- a/catalog.html
+++ b/catalog.html
@@ -52,13 +52,22 @@
       </ul>
       <h1>Перфораторы</h1>
       <section>
-        <h2>Производители:</h2>
+        <h2>Фильтр:</h2>
+        <h3>Цена:</h3>
         <!-- здесь будет форма -->
-        <h2>Питание:</h2>
+        <h3>Производители:</h3>
+        <!-- здесь будет форма -->
+        <h3>Питание:</h3>
         <!-- здесь будет форма -->
         <button type="button" name="show">Показать</button>
       </section>
       <section>
+        <h2>Сортировка:</h2>
+        <ul>
+          <li>По цене</li>
+          <li>По типу</li>
+          <li>По функционалу</li>
+        </ul>
         <h2 hidden>Каталог товаров:</h2>
         <ul>
           <li>
