--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <a href="index.html">
-        <img src="https://via.placeholder.com/200x46" width="200" height="46" alt="Логотип интернет-магазина «Техномарт»">
+        <img src="img/logo.svg" width="200" height="47" alt="Логотип интернет-магазина «Техномарт»">
       </a>
       <ul>
         <li>Поиск:</li> <!--Здесь будет форма. -->
@@ -71,7 +71,7 @@
         <h2 hidden>Каталог товаров:</h2>
         <ul>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 3000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -82,7 +82,7 @@
             <button type="button" name="price">15500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 6000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -93,7 +93,7 @@
             <button type="button" name="price">25500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 2000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -103,7 +103,7 @@
             <button type="button" name="price">12500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 3000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -114,7 +114,7 @@
             <button type="button" name="price">15500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 6000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -125,7 +125,7 @@
             <button type="button" name="price">25500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 2000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -135,7 +135,7 @@
             <button type="button" name="price">12500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 3000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -146,7 +146,7 @@
             <button type="button" name="price">15500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 6000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -157,7 +157,7 @@
             <button type="button" name="price">25500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 2000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -183,7 +183,7 @@
     </main>
     <footer>
       <a href="index.html">
-        <img src="https://via.placeholder.com/200x46" width="200" height="46" alt="Логотип интернет-магазина «Техномарт»">
+        <img src="img/logo.svg" width="200" height="47" alt="Логотип интернет-магазина «Техномарт»">
       </a>
       <nav>
         <ul>
@@ -207,9 +207,9 @@
       <p>© 2010–2019 Компания «Техномарт» <br>
         Все права защищены</p>
       <div>
-        <a href="https://vk.com/rewoop"><img src="vk.jpg" alt="Вкотакте"></a>
-        <a href="#"><img src="instagram.jpg" alt="Инстаграм"></a>
-        <a href="#"><img src="facebook.jpg" alt="Фэйсбук"></a>
+        <a href="https://vk.com/rewoop"><img src="img/vk.svg" alt="Вкотакте"></a>
+        <a href="#"><img src="img/facebook.svg" alt="Фэйсбук"></a>
+        <a href="#"><img src="img/instagram.svg" alt="Инстаграм"></a>
       </div>
       <p>Обратная связь: <br>
         mail@htmlacademy.ru</p>
