--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <a href="index.html">
-        <img src="https://via.placeholder.com/200x46" width="200" height="46" alt="Логотип интернет-магазина «Техномарт»">
+        <img src="img/logo.svg" width="200" height="47" alt="Логотип интернет-магазина «Техномарт»">
       </a>
       <ul>
         <li>Поиск:</li> <!--Здесь будет форма. -->
@@ -224,14 +224,14 @@
         <p>Вы можете забрать товар сами, <br>
           заехав в наш офис:</p>
         <a href="https://yandex.ru/maps/-/CBF9nKAJWA">
-          <img src="https://via.placeholder.com/300x168" width="300" height="168" alt="Карта расположения офиса компании.">
+          <img src="img/map.png" width="300" height="158" alt="Карта расположения офиса компании">
         </a>
         <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
       </section>
     </main>
     <footer>
       <a href="index.html">
-        <img src="https://via.placeholder.com/200x46" width="200" height="46" alt="Логотип интернет-магазина «Техномарт»">
+        <img src="img/logo.svg" width="200" height="47" alt="Логотип интернет-магазина «Техномарт»">
       </a>
       <nav>
         <ul>
@@ -255,9 +255,9 @@
       <p>© 2010–2019 Компания «Техномарт» <br>
         Все права защищены</p>
       <div>
-        <a href="https://vk.com/rewoop"><img src="vk.jpg" alt="Вкотакте"></a>
-        <a href="#"><img src="instagram.jpg" alt="Инстаграм"></a>
-        <a href="#"><img src="facebook.jpg" alt="Фэйсбук"></a>
+        <a href="https://vk.com/rewoop"><img src="img/vk.svg" alt="Вкотакте"></a>
+        <a href="#"><img src="img/facebook.svg" alt="Фэйсбук"></a>
+        <a href="#"><img src="img/instagram.svg" alt="Инстаграм"></a>
       </div>
       <p>Обратная связь: <br>
         mail@htmlacademy.ru</p>
