Добавил дополнительные контентные картинки в разметку

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </form>
         <ul>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 9000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -104,7 +104,7 @@
             <button type="button" name="price">25500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 3000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -115,7 +115,7 @@
             <button type="button" name="price">15500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 6000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -126,7 +126,7 @@
             <button type="button" name="price">25500 Р.</button>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Перфоратор BOSCH BFG 2000"></a>
+            <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
             <h3>
               <a href="catalog-item.html">
               <span>Перфоратор BOSCH</span>
@@ -145,42 +145,42 @@
         <ul>
           <li>
             <a href="https://www.bosch.ru/">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Bosch">
+              <img src="img/partner_logo_1.jpg" width="126" height="37" alt="Bosch">
             </a>
           </li>
           <li>
             <a href="http://www.makita.ru/">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Makita">
+              <img src="img/partner_logo_2.jpg" width="123" height="40" alt="Makita">
             </a>
           </li>
           <li>
             <a href="https://ru.dewalt.global/">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Dewalt">
+              <img src="img/partner_logo_3.jpg" width="146" height="44" alt="Dewalt">
             </a>
           </li>
           <li>
             <a href="http://www.interskol.ru/">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Интерскол">
+              <img src="img/partner_logo_4.jpg" width="200" height="88" alt="Интерскол">
             </a>
           </li>
           <li>
             <a href="https://www.hitachi.ru/ru">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Hitachi">
+              <img src="img/partner_logo_5.jpg" width="169" height="31" alt="Hitachi">
             </a>
           </li>
           <li>
             <a href="https://www.lg.com/ru">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="LG">
+              <img src="img/partner_logo_6.jpg" width="121" height="73" alt="LG">
             </a>
           </li>
           <li>
             <a href="https://www.aeg.ru/">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="AEG">
+              <img src="img/partner_logo_7.jpg" width="151" height="96" alt="AEG">
             </a>
           </li>
           <li>
             <a href="https://www.metabo.com/ru/ru/">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145" alt="metabo">
+              <img src="img/partner_logo_8.jpg" width="204" height="69" alt="metabo">
             </a>
           </li>
         </ul>
