--- a/catalog.html
+++ b/catalog.html
@@ -10,26 +10,38 @@
         <img src="img/logo.svg" width="200" height="47" alt="Логотип интернет-магазина «Техномарт»">
       </a>
       <ul>
-        <li>Поиск:</li> <!--Здесь будет форма. -->
-        <li><a href="#">Закладки: 0</a></li> <!--Здесь будет форма. -->
-        <li><a href="#">Корзина:10</a></li> <!--Здесь будет форма. -->
-        <li><a href="#">Оформить заказ</a></li> <!--Здесь будет форма. -->
+        <li>
+      <form class="" action="https://echo.htmlacademy.ru" method="get">
+        <label for="search" class="visually-hidden">Поиск:</label>
+        <button type="submit"><img src="img/icon-search.svg" alt="Поиск"></button>
+        <input id="search" type="search" name="search" value="" placeholder="Поиск:">
+      </form>
+        </li>
+        <li>
+          <a href="#">Закладки: 0</a>
+        </li>
+        <li>
+          <a href="#">Корзина: 10</a>
+        </li>
+        <li>
+          <a href="#">Оформить заказ</a>
+        </li>
       </ul>
       <p> Интернет-магазин <br>
         строительных материалов <br>
         и инструментов для ремонта
       </p>
       <section>
-        <h2 hidden>Контактный телефон:</h2>
+        <h2 class="visually-hidden">Контактный телефон:</h2>
         <span>+7 (812) 555-05-55</span>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </section>
       <section>
-        <h2 hidden>Данные пользователя</h2>
+        <h2 class="visually-hidden">Данные пользователя</h2>
         <ul>
           <li>Равшан Джамшутович</li>
-          <li><a href="my-orders">Мои заказы</a></li>
-          <li><a href="persolan-area">Личный кабинет</a></li>
+          <li><a href="#">Мои заказы</a></li>
+          <li><a href="#">Личный кабинет</a></li>
       </ul>
       </section>
       <nav>
@@ -45,6 +57,12 @@
       </nav>
     </header>
     <main>
+      <form class="" action="#" method="post">
+        Товар добавлен в корзину!
+        <a href="#">Оформить заказ</a>
+        <button type="button">Продолжить покупки</button>
+        <button type="button">Закрыть</button>
+      </form>
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
@@ -53,13 +71,32 @@
       <h1>Перфораторы</h1>
       <section>
         <h2>Фильтр:</h2>
-        <h3>Цена:</h3>
-        <!-- здесь будет форма -->
-        <h3>Производители:</h3>
-        <!-- здесь будет форма -->
-        <h3>Питание:</h3>
-        <!-- здесь будет форма -->
-        <button type="button" name="show">Показать</button>
+          <form class="" action="https://echo.htmlacademy.ru" method="post">
+            <fieldset>
+              <legend>Цена:</legend>
+            </fieldset>
+            <fieldset>
+              <legend>Производители:</legend>
+              <input id="bosch" type="checkbox" name="bosch" value="">
+              <label for="bosch">BOSCH</label>
+              <input id="interskol" type="checkbox" name="interskol" value="">
+              <label for="interskol">Интерскол</label>
+              <input id="makita" type="checkbox" name="makita" value="">
+              <label for="makita">Makita</label>
+              <input id="dewalt" type="checkbox" name="dewalt" value="">
+              <label for="dewalt">Dewalt</label>
+              <input id="hitachi" type="checkbox" name="hitachi" value="">
+              <label for="hitachi">Hitachi</label>
+            </fieldset>
+            <fieldset>
+              <legend>Питание:</legend>
+              <input id="rechargeable" type="radio" name="power" value="rechargeable" checked>
+              <label for="rechargeable">Аккумуляторные</label>
+              <input id="network" type="radio" name="power" value="network">
+              <label for="network">Сетевые</label>
+            </fieldset>
+            <button type="submit">Показать</button>
+          </form>
       </section>
       <section>
         <h2>Сортировка:</h2>
@@ -68,7 +105,7 @@
           <li>По типу</li>
           <li>По функционалу</li>
         </ul>
-        <h2 hidden>Каталог товаров:</h2>
+        <h2 class="visually-hidden">Каталог товаров:</h2>
         <ul>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
@@ -79,7 +116,7 @@
               </a>
             </h3>
             <p><del>22500 Р.</del> </p>
-            <button type="button" name="price">15500 Р.</button>
+            <p>15500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
@@ -90,7 +127,7 @@
               </a>
             </h3>
             <p><del>30500 Р.</del> </p>
-            <button type="button" name="price">25500 Р.</button>
+            <p>25500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
@@ -100,7 +137,7 @@
               <span>BFG 2000</span>
               </a>
             </h3>
-            <button type="button" name="price">12500 Р.</button>
+            <p>12500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
@@ -111,7 +148,7 @@
               </a>
             </h3>
             <p><del>22500 Р.</del> </p>
-            <button type="button" name="price">15500 Р.</button>
+            <p>15500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
@@ -122,7 +159,7 @@
               </a>
             </h3>
             <p><del>30500 Р.</del> </p>
-            <button type="button" name="price">25500 Р.</button>
+            <p>25500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
@@ -132,7 +169,7 @@
               <span>BFG 2000</span>
               </a>
             </h3>
-            <button type="button" name="price">12500 Р.</button>
+            <p>12500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
@@ -143,7 +180,7 @@
               </a>
             </h3>
             <p><del>22500 Р.</del> </p>
-            <button type="button" name="price">15500 Р.</button>
+            <p>15500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
@@ -154,7 +191,7 @@
               </a>
             </h3>
             <p><del>30500 Р.</del> </p>
-            <button type="button" name="price">25500 Р.</button>
+            <p>25500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
@@ -164,7 +201,7 @@
               <span>BFG 2000</span>
               </a>
             </h3>
-            <button type="button" name="price">12500 Р.</button>
+            <p>12500 Р.</p>
           </li>
         </ul>
       </section>
