--- a/index.html
+++ b/index.html
@@ -10,17 +10,29 @@
         <img src="img/logo.svg" width="200" height="47" alt="Логотип интернет-магазина «Техномарт»">
       </a>
       <ul>
-        <li>Поиск:</li> <!--Здесь будет форма. -->
-        <li><a href="#">Закладки: 0</a></li> <!--Здесь будет форма. -->
-        <li><a href="#">Корзина:0</a></li> <!--Здесь будет форма. -->
-        <li><a href="#">Оформить заказ</a></li> <!--Здесь будет форма. -->
+        <li>
+      <form class="" action="https://echo.htmlacademy.ru" method="get">
+        <label for="search" class="visually-hidden">Поиск:</label>
+        <button type="submit"><img src="img/icon-search.svg" alt="Поиск"></button>
+        <input id="search" type="search" name="search" value="" placeholder="Поиск:">
+      </form>
+        </li>
+        <li>
+          <a href="#">Закладки: 0</a>
+        </li>
+        <li>
+          <a href="#">Корзина: 0</a>
+        </li>
+        <li>
+          <a href="#">Оформить заказ</a>
+        </li>
       </ul>
       <p> Интернет-магазин <br>
         строительных материалов <br>
         и инструментов для ремонта
       </p>
       <section>
-        <h2 hidden>Контактный телефон:</h2>
+        <h2 class="visually-hidden">Контактный телефон:</h2>
         <span>+7 (812) 555-05-55</span>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </section>
@@ -217,16 +229,32 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-         <button type="button" name="company-info">Подробнее о компании</button> <!-- Здесь будет форма. -->
+        <a href="#">Подробнее о компании</a>
       </section>
       <section>
         <h2>Котакты</h2>
         <p>Вы можете забрать товар сами, <br>
           заехав в наш офис:</p>
-        <a href="https://yandex.ru/maps/-/CBF9nKAJWA">
           <img src="img/map.png" width="300" height="158" alt="Карта расположения офиса компании">
-        </a>
         <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
+      </section>
+      <section>
+        <h2 class="visually-hidden">Как до нас добраться</h2>
+        <img src="img/map_popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
+        <button type="button">Закрыть</button>
+      </section>
+      <section>
+        <h2 class="visually-hidden">Форма обратной связи</h2>
+        <form class="" action="https://echo.htmlacademy.ru" method="post">
+            <label for="name">Ваше имя:</label>
+            <input id="name" type="text" name="name" value="" placeholder="Имя Фамилия">
+            <label for="email">Ваше e-mail:</label>
+            <input id="email" type="email" name="email" value="" placeholder="email@example.com">
+            <label for="letter">Текст письма:</label>
+            <textarea id="letter" name="letter" rows="8" cols="80" placeholder="В свободной форме"></textarea>
+            <button type="submit">Отправить</button>
+            <button type="button">Закрыть</button>
+        </form>
       </section>
     </main>
     <footer>
