Разметка каталога в дополнительном домашнем задании.

--- a/catalog.html
+++ b/catalog.html
@@ -86,9 +86,13 @@
               <legend>Цена:</legend>
               <div class="price-range">
                 <div class="ui-price-range"></div>
+                <div class="ui-selected-range"></div>
                 <span tabindex="0" class="min-price-range"></span>
                 <span tabindex="0" class="max-price-range"></span>
               </div>
+              <div class="min-price-value">0</div>
+              <span class="line">—</span>
+              <div class="max-price-value">30000</div>
             </fieldset>
             <fieldset>
               <legend>Производители:</legend>
