Исправил основной шрифт разметки

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="cuprum-family">
       <div class="darkblue-background">
         <div class="main-bar container">
           <div class="logo-header">
@@ -71,7 +71,7 @@
       </nav>
     </div>
     </header>
-    <main>
+    <main class="cuprum-family">
       <div class="visually-hidden">
         <p>Товар добавлен в корзину!</p>
         <a href="#">Оформить заказ</a>
@@ -247,7 +247,7 @@
           ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </section>
     </main>
-    <footer>
+    <footer class="cuprum-family">
       <div class="first-footer-background">
         <section class="container first-footer-section">
         <div class="first-footer">
