--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="cuprum-family">
       <div class="darkblue-background">
         <div class="main-bar container">
           <div class="logo-header">
@@ -64,7 +64,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="cuprum-family">
     <div class="container m-top m-bottom">
       <div class="container-elements-first-line">
         <section class="elements-catalog-list element-1">
@@ -86,16 +86,15 @@
         <div class="big-element">
           <section class="element-4">
             <!-- <div class="first-slider">
-              <h2>Перфораторы</h2>
-              <p>Настоящие мужские игрушки</p>
-              <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
-              <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
-              <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
+              <h2 class="mp-null">Перфораторы</h2>
+              <p class="mp-null">Настоящие мужские игрушки</p>
             </div> -->
             <div class="second-slider">
               <h2 class="mp-null">Дрели</h2>
-              <p>Соседям на радость!</p>
-              <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
+              <p class="mp-null">Соседям на радость!</p>
+            </div>
+            <div class="slider-btns">
+              <a href="#" class="left-btn"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
               <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
               <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
             </div>
@@ -301,7 +300,7 @@
         </form>
       </section>
     </main>
-    <footer>
+    <footer class="cuprum-family">
       <div class="first-footer-background">
         <section class="container first-footer-section">
         <div class="first-footer">
